--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,11 @@ h1,h2,h3,h4,h5,h6{
     font-size: 3.5rem;
 }
 
+/* navbar */
+.navbar-toggler-icon{
+    background-image: none;
+}
+
 /* jumbo */
 .jumbo-img{
     height: 85vh;
