completato layout footer

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ h1,h2,h3,h4,h5,h6{
     color: #04DF6C;
 }
 
-.bg-section-paperelle{
+.bg-section-paperelle, .bg-section-newsletter{
     background-color: #f5f5f5;
 }
 
@@ -131,6 +131,34 @@ h1,h2,h3,h4,h5,h6{
     border-color: transparent;
 }
 
+/* newsletter section */
+#send{
+    display: inline-block;
+    width: 40px;
+}
+
+.input-group{
+    flex-wrap: nowrap;
+    width: 50%;
+    margin: 30px 0;
+}
+
+.form-control, .input-group-text{
+    padding: 0;
+    border: none;
+    border-radius: 0;
+    background-color: transparent;
+    box-shadow: 0 2px rgba(0, 0, 0, 0.175);
+}
+
+/* socials */
+#facebook, #twitter, #instagram,#linkedin,#youtube{
+    display: inline-block;
+    width: 28px;
+    border: 1px solid lightgray;
+    border-radius: 50%;
+    padding: 3px;
+}
  /* media query */
 @media screen and (min-width:992px) {
     .jumbo-paragraph {
